[gd_scene load_steps=8 format=3 uid="uid://b5x1dn0lussto"]

[ext_resource type="PackedScene" uid="uid://bcmfox80hwm8a" path="res://Scenes/Player.tscn" id="1_oumcd"]
[ext_resource type="PackedScene" uid="uid://bypulil2a7lii" path="res://Scenes/Lily.tscn" id="2_l7y0i"]
[ext_resource type="Script" path="res://Scripts/win.gd" id="2_u12yg"]
[ext_resource type="Texture2D" uid="uid://bjlakvaxqn8n4" path="res://Assets/Sprites/Environment/废墟.png" id="3_qyie4"]
[ext_resource type="Texture2D" uid="uid://d0fe2vhv0uitr" path="res://Assets/Sprites/Environment/废墟-地面.png" id="4_funf1"]
[ext_resource type="AudioStream" uid="uid://cbu77np8vq30a" path="res://Assets/Audio/废墟.mp3" id="6_pveqj"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_onrhe"]
distance = 6.59044

[node name="Win" type="Node2D"]
script = ExtResource("2_u12yg")
lily_scene = ExtResource("2_l7y0i")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.84, 1.84)

[node name="BackGround" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="BackGround"]
position = Vector2(24, 0)
scale = Vector2(1.82571, 1.95725)
texture = ExtResource("3_qyie4")

[node name="ColorRect" type="ColorRect" parent="BackGround"]
visible = false
offset_left = 424.0
offset_top = 176.0
offset_right = 464.0
offset_bottom = 216.0
scale = Vector2(-21.208, -8.93181)
color = Color(0, 0, 0, 0.329412)

[node name="Ground" type="Sprite2D" parent="BackGround"]
position = Vector2(25, 3)
scale = Vector2(-1.97296, 1.94136)
texture = ExtResource("4_funf1")

[node name="Boundary" type="Node2D" parent="."]

[node name="TemperaryGround" type="StaticBody2D" parent="Boundary"]
position = Vector2(1.19209e-07, 132)
scale = Vector2(-13.1459, 5.46246)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundary/TemperaryGround"]
position = Vector2(0.304277, 9.33645)
shape = SubResource("WorldBoundaryShape2D_onrhe")

[node name="Player" parent="." instance=ExtResource("1_oumcd")]
position = Vector2(-394, 91)
scale = Vector2(4, 4)

[node name="DialogTimer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HeartContainer" type="HBoxContainer" parent="CanvasLayer"]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="Heart1" type="TextureRect" parent="CanvasLayer/HeartContainer"]
layout_mode = 2

[node name="Heart2" type="TextureRect" parent="CanvasLayer/HeartContainer"]
layout_mode = 2

[node name="Heart3" type="TextureRect" parent="CanvasLayer/HeartContainer"]
layout_mode = 2

[node name="BlackOverlay" type="ColorRect" parent="."]
offset_left = -323.0
offset_top = -184.0
offset_right = 319.0
offset_bottom = 183.0
color = Color(0, 0, 0, 1)

[node name="EndCredits" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -252.0
offset_top = -1.0
offset_right = 248.0
offset_bottom = 99.0

[node name="CreditsLabel" type="Label" parent="EndCredits"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 205.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "谢谢游玩！

Presented by Cupcake Games

A tribute to all who chose to leave...

Special Thanks:
You — for choosing to walk away.

Music:
Wind through empty rooms  
Footsteps beyond the threshold

Art & Code:
Borrowed from life  
Painted with rage and joy

—

What happens after Mei walks off screen?

What happens after Nora leaves home?

The story ends.
The world doesn't.

We hope you carry this question with you.

再见，朋友。"
clip_text = true

[node name="BGMPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_pveqj")
autoplay = true
